--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.18.1
   url_launcher: ^6.1.11
 
   # The following adds the Cupertino Icons font to your application.
