--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,13 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/font/
+
+  fonts:
+    - family: Playfair
+      fonts:
+        - asset: assets/font/PlayfairDisplay-Regular.ttf
+          style: normal
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
